--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Disney characters</title>
+    <script
+      src="https://kit.fontawesome.com/a3163057cb.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="icon" href="" />
   </head>
